refatorando o category controller para suportar somente as rotas e funcoes do mesmo, criando a subcategoria separada do category